Refactor función de cálculo de área y agregar pruebas para casos negativos

--- a/Lab - 01/Propuestos/ex01.ipynb
+++ b/Lab - 01/Propuestos/ex01.ipynb
@@ -11,20 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "59de3e24",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calcula el área de un rectángulo.\n",
     "def calcular_area_rectangulo(base, altura):\n",
-    "    \"\"\"\n",
-    "    Calcula el área de un rectángulo.\n",
-    "    Args:\n",
-    "        base: Longitud de la base del rectángulo (float o int).\n",
-    "        altura: Longitud de la altura del rectángulo (float o int).\n",
-    "    Returns:\n",
-    "        El área calculada como base * altura.\n",
-    "    \"\"\"\n",
+    "    if not isinstance(base, (int, float)) or not isinstance(altura, (int, float)):\n",
+    "        raise ValueError(\"La base y la altura deben ser números\")\n",
+    "    if base <= 0 or altura <= 0:\n",
+    "        raise ValueError(\"La base y la altura deben ser mayores que 0\")\n",
     "    return base * altura"
    ]
   },
@@ -58,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cbe8bb94",
    "metadata": {},
    "outputs": [
@@ -74,7 +71,10 @@
       "2  | Decimales positivos  | 3.5   | 2.5    | 8.75     | 8.75     | ✓\n",
       "3  | Entero y decimal     | 6     | 1.5    | 9.0      | 9.0      | ✓\n",
       "4  | Valores grandes      | 1000  | 2000   | 2000000  | 2000000  | ✓\n",
-      "5  | Valores pequeños     | 0.01  | 0.02   | 0.0002   | 0.0002   | ✓\n"
+      "5  | Valores pequeños     | 0.01  | 0.02   | 0.0002   | 0.0002   | ✓\n",
+      "6  | Base negativa        | -5    | 4      | Error    | Error    | ✗\n",
+      "7  | Altura negativa      | 5     | -4     | Error    | Error    | ✗\n",
+      "8  | Ambos negativos      | -5    | -4     | Error    | Error    | ✗\n"
      ]
     }
    ],
@@ -89,7 +89,10 @@
     "        (2, \"Decimales positivos\", 3.5, 2.5, 8.75),\n",
     "        (3, \"Entero y decimal\", 6, 1.5, 9.0),\n",
     "        (4, \"Valores grandes\", 1000, 2000, 2000000),\n",
-    "        (5, \"Valores pequeños\", 0.01, 0.02, 0.0002)\n",
+    "        (5, \"Valores pequeños\", 0.01, 0.02, 0.0002),\n",
+    "        (6, \"Base negativa\", -5, 4, None),  # Caso con base negativa\n",
+    "        (7, \"Altura negativa\", 5, -4, None),  # Caso con altura negativa\n",
+    "        (8, \"Ambos negativos\", -5, -4, None)  # Caso con ambos negativos\n",
     "    ]\n",
     "\n",
     "    print(\"\\n--- PRUEBAS DEL ÁREA DEL RECTÁNGULO ---\")\n",
@@ -97,9 +100,18 @@
     "    print(\"-\" * 75)\n",
     "\n",
     "    for id, desc, base, alt, esperado in casos:\n",
-    "        obtenido = calcular_area_rectangulo(base, alt)\n",
-    "        resultado = \"✓\" if obtenido == esperado else \"✗\"\n",
-    "        print(f\"{id}  | {desc:<20} | {base:<5} | {alt:<6} | {esperado:<8} | {obtenido:<8} | {resultado}\")\n",
+    "        try:\n",
+    "            obtenido = calcular_area_rectangulo(base, alt)\n",
+    "            resultado = \"✓\" if obtenido == esperado else \"✗\"\n",
+    "        except ValueError as e:\n",
+    "            obtenido = \"Error\"\n",
+    "            resultado = \"✗\"  # Si esperamos un error y ocurre, es un éxito\n",
+    "        \n",
+    "        # Convertir a string para el formateo\n",
+    "        esperado_str = \"Error\" if esperado is None else str(esperado)\n",
+    "        obtenido_str = str(obtenido)\n",
+    "        \n",
+    "        print(f\"{id}  | {desc:<20} | {base:<5} | {alt:<6} | {esperado_str:<8} | {obtenido_str:<8} | {resultado}\")\n",
     "\n",
     "# main() # Ejecutar el programa principal\n",
     "pruebas_area_rectangulo() # Ejecutar pruebas"
