Actualizar descripciones y resultados de pruebas en el simulador de cajero automático

--- a/Lab - 01/Propuestos/ex03.ipynb
+++ b/Lab - 01/Propuestos/ex03.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "9fa7c750",
    "metadata": {},
    "outputs": [
@@ -112,15 +112,15 @@
       "----- PRUEBAS DEL CAJERO AUTOMÁTICO -----\n",
       "ID | Descripción | Operación | Monto | Esperado | Obtenido | Resultado\n",
       "------------------------------------------------------------------------------------------------------------------------\n",
-      "1 | Consultar saldo inicial | consultar | N/A | Su saldo actual es: S/.1000.00 | Su saldo actual es: S/.1000.00 | ✓\n",
-      "2 | Depositar monto positivo | depositar | 500 | Depósito exitoso. Su nuevo saldo es: S/.1500.00 | Depósito exitoso. Su nuevo saldo es: S/.1500.00 | ✓\n",
-      "3 | Depositar monto cero | depositar | 0 | Error: El monto a depositar debe ser positivo. | Error: El monto a depositar debe ser positivo. | ✓\n",
-      "4 | Depositar monto negativo | depositar | -100 | Error: El monto a depositar debe ser positivo. | Error: El monto a depositar debe ser positivo. | ✓\n",
-      "5 | Retirar monto válido | retirar | 300 | Retiro exitoso. Su nuevo saldo es: S/.700.00 | Retiro exitoso. Su nuevo saldo es: S/.700.00 | ✓\n",
-      "6 | Retirar monto mayor al saldo | retirar | 2000 | Error: Saldo insuficiente para realizar el retiro. | Error: Saldo insuficiente para realizar el retiro. | ✓\n",
-      "7 | Retirar monto cero | retirar | 0 | Error: El monto a retirar debe ser positivo. | Error: El monto a retirar debe ser positivo. | ✓\n",
-      "8 | Retirar monto negativo | retirar | -50 | Error: El monto a retirar debe ser positivo. | Error: El monto a retirar debe ser positivo. | ✓\n",
-      "9 | Retirar monto exacto del saldo | retirar | 1000 | Retiro exitoso. Su nuevo saldo es: S/.0.00 | Retiro exitoso. Su nuevo saldo es: S/.0.00 | ✓\n"
+      "1 | Saldo inicial | consultar | N/A | Su saldo actual es: S/.1000.00 | Su saldo actual es: S/.1000.00 | ✓\n",
+      "2 | Depositar +500 | depositar | 500 | Depósito exitoso. Su nuevo saldo es: S/.1500.00 | Depósito exitoso. Su nuevo saldo es: S/.1500.00 | ✓\n",
+      "3 | Depositar 0 | depositar | 0 | Error: El monto a depositar debe ser positivo. | Error: El monto a depositar debe ser positivo. | ✓\n",
+      "4 | Depositar -100 | depositar | -100 | Error: El monto a depositar debe ser positivo. | Error: El monto a depositar debe ser positivo. | ✓\n",
+      "5 | Retirar 300 | retirar | 300 | Retiro exitoso. Su nuevo saldo es: S/.700.00 | Retiro exitoso. Su nuevo saldo es: S/.700.00 | ✓\n",
+      "6 | Retirar > saldo | retirar | 2000 | Error: Saldo insuficiente para realizar el retiro. | Error: Saldo insuficiente para realizar el retiro. | ✓\n",
+      "7 | Retirar 0 | retirar | 0 | Error: El monto a retirar debe ser positivo. | Error: El monto a retirar debe ser positivo. | ✓\n",
+      "8 | Retirar -50 | retirar | -50 | Error: El monto a retirar debe ser positivo. | Error: El monto a retirar debe ser positivo. | ✓\n",
+      "9 | Retirar todo | retirar | 1000 | Retiro exitoso. Su nuevo saldo es: S/.0.00 | Retiro exitoso. Su nuevo saldo es: S/.0.00 | ✓\n"
      ]
     }
    ],
@@ -128,15 +128,15 @@
     "# Pruebas automatizadas\n",
     "def prueba_cajero_automatico():\n",
     "    casos_prueba = [\n",
-    "        {\"id\": 1, \"descripcion\": \"Consultar saldo inicial\", \"operacion\": \"consultar\", \"monto\": None, \"esperado\": \"Su saldo actual es: S/.1000.00\"},\n",
-    "        {\"id\": 2, \"descripcion\": \"Depositar monto positivo\", \"operacion\": \"depositar\", \"monto\": 500, \"esperado\": \"Depósito exitoso. Su nuevo saldo es: S/.1500.00\"},\n",
-    "        {\"id\": 3, \"descripcion\": \"Depositar monto cero\", \"operacion\": \"depositar\", \"monto\": 0, \"esperado\": \"Error: El monto a depositar debe ser positivo.\"},\n",
-    "        {\"id\": 4, \"descripcion\": \"Depositar monto negativo\", \"operacion\": \"depositar\", \"monto\": -100, \"esperado\": \"Error: El monto a depositar debe ser positivo.\"},\n",
-    "        {\"id\": 5, \"descripcion\": \"Retirar monto válido\", \"operacion\": \"retirar\", \"monto\": 300, \"esperado\": \"Retiro exitoso. Su nuevo saldo es: S/.700.00\"},\n",
-    "        {\"id\": 6, \"descripcion\": \"Retirar monto mayor al saldo\", \"operacion\": \"retirar\", \"monto\": 2000, \"esperado\": \"Error: Saldo insuficiente para realizar el retiro.\"},\n",
-    "        {\"id\": 7, \"descripcion\": \"Retirar monto cero\", \"operacion\": \"retirar\", \"monto\": 0, \"esperado\": \"Error: El monto a retirar debe ser positivo.\"},\n",
-    "        {\"id\": 8, \"descripcion\": \"Retirar monto negativo\", \"operacion\": \"retirar\", \"monto\": -50, \"esperado\": \"Error: El monto a retirar debe ser positivo.\"},\n",
-    "        {\"id\": 9, \"descripcion\": \"Retirar monto exacto del saldo\", \"operacion\": \"retirar\", \"monto\": 1000, \"esperado\": \"Retiro exitoso. Su nuevo saldo es: S/.0.00\"}\n",
+    "        {\"id\": 1, \"descripcion\": \"Saldo inicial\", \"operacion\": \"consultar\", \"monto\": None, \"esperado\": \"Su saldo actual es: S/.1000.00\"},\n",
+    "        {\"id\": 2, \"descripcion\": \"Depositar +500\", \"operacion\": \"depositar\", \"monto\": 500, \"esperado\": \"Depósito exitoso. Su nuevo saldo es: S/.1500.00\"},\n",
+    "        {\"id\": 3, \"descripcion\": \"Depositar 0\", \"operacion\": \"depositar\", \"monto\": 0, \"esperado\": \"Error: El monto a depositar debe ser positivo.\"},\n",
+    "        {\"id\": 4, \"descripcion\": \"Depositar -100\", \"operacion\": \"depositar\", \"monto\": -100, \"esperado\": \"Error: El monto a depositar debe ser positivo.\"},\n",
+    "        {\"id\": 5, \"descripcion\": \"Retirar 300\", \"operacion\": \"retirar\", \"monto\": 300, \"esperado\": \"Retiro exitoso. Su nuevo saldo es: S/.700.00\"},\n",
+    "        {\"id\": 6, \"descripcion\": \"Retirar > saldo\", \"operacion\": \"retirar\", \"monto\": 2000, \"esperado\": \"Error: Saldo insuficiente para realizar el retiro.\"},\n",
+    "        {\"id\": 7, \"descripcion\": \"Retirar 0\", \"operacion\": \"retirar\", \"monto\": 0, \"esperado\": \"Error: El monto a retirar debe ser positivo.\"},\n",
+    "        {\"id\": 8, \"descripcion\": \"Retirar -50\", \"operacion\": \"retirar\", \"monto\": -50, \"esperado\": \"Error: El monto a retirar debe ser positivo.\"},\n",
+    "        {\"id\": 9, \"descripcion\": \"Retirar todo\", \"operacion\": \"retirar\", \"monto\": 1000, \"esperado\": \"Retiro exitoso. Su nuevo saldo es: S/.0.00\"}\n",
     "    ]\n",
     "\n",
     "    print(\"\\n----- PRUEBAS DEL CAJERO AUTOMÁTICO -----\")\n",
